syntax = "proto3";
package lendingpool;

import "google/protobuf/timestamp.proto";

option go_package = "blep.ai/data/connectors/aave/lendingpool";

message LendingPoolBorrow {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
  bytes                     behalfOf             = 7; // address
  bytes                     amount               = 8; // uint256
  bytes                     borrowRate           = 9; // uint256
  bytes                     rateMode             = 10; // uint256
  uint64                    referral             = 11; // uint16
}

message LendingPoolDeposit {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
  bytes                     behalfOf             = 7; // address
  bytes                     amount               = 8; // uint256
  uint64                    referral             = 9; // uint16
}

message LendingPoolFlashLoan {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     target               = 5; // address
  bytes                     initiator            = 6; // address
  bytes                     asset                = 7; // address
  bytes                     amount               = 8; // uint256
  bytes                     premium              = 9; // uint256
  uint64                    referral             = 10; // uint16
}

message LendingPoolLiquidationCall {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     collateralAsset      = 5; // address
  bytes                     debtAsset            = 6; // address
  bytes                     user                 = 7; // address
  bytes                     debtToCover          = 8; // uint256
  bytes                     collateralAmount     = 9; // uint256
  bytes                     liquidator           = 10; // address
  bool                      receiveAToken        = 11;
}


message LendingPoolRebalance {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
}

message LendingPoolRepay {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
  bytes                     amount               = 7; // uint256
  bytes                     repayer              = 8; //address
}

message LendingPoolReserveAsCollateral {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
  bool                      collateral           = 7;
}

message LendingPoolReserveUpdated {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     liquidityRate        = 6; // uint256
  bytes                     stableBorrowRate     = 7; // uint256
  bytes                     varBorrowRate        = 8; // uint256
  bytes                     liquidityIndex       = 9; // uint256
  bytes                     varBorrowIndex       = 10; // uint256
}

message LendingPoolSwap {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
  bytes                     rateMode             = 7; // uint256
}

message LendingPoolWithdraw {
  google.protobuf.Timestamp ts                   = 1;
  uint64                    block                = 2;
  uint64                    idx                  = 3;
  bytes                     tx                   = 4; // tx hash
  bytes                     reserve              = 5; // address
  bytes                     user                 = 6; // address
  bytes                     amount               = 7; // uint256
  bytes                     to                   = 8; // address
}



